Адаптация под мобильные: Шапка + Блок вопроса

--- a/src/base/base.pug
+++ b/src/base/base.pug
@@ -51,8 +51,8 @@ html(lang="ru")
             include ../components/header/header
 
             //- Block main content
-            .container
-                .px-25
+            .container.px-0.px-sm-15
+                .px-xl-25
                     block main
 
         //.d-none
