--- a/src/components/bootstrap/_btn.sass
+++ b/src/components/bootstrap/_btn.sass
@@ -8,7 +8,9 @@
         height: 48px
 
     &-s67
-        height: 67px
+        height: 55px
+        @include media-breakpoint-up(sm)
+            height: 67px
 
     &-flare
         position: relative
