--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,7 +1,7 @@
 footer.footer
     .row.justify-content-between
-        .col-md-5.text-center
+        .col-lg-5.text-center
             a.footer__link(href="#") Политика конфиденциальности
 
-        .col-md-5.text-center
+        .col-lg-5.text-center.mt-2.mt-lg-0
             a.footer__link(href="#") Разработано в Quiz24.ru
