--- a/src/components/quiz/quiz__quest-block.pug
+++ b/src/components/quiz/quiz__quest-block.pug
@@ -1,19 +1,20 @@
 .row.no-gutters
-    .col-sm-auto.pr-60
-        .radio.radio--btn
-            input.radio__input#quiz1-1(type="radio" name="quiz1")
-            label.radio__label.radio__label--danger(for="quiz1-1") нет, это не про меня
+    .col-lg-auto
+        .pr-lg-60
+            .radio.radio--btn
+                input.radio__input#quiz1-1(type="radio" name="quiz1")
+                label.radio__label.radio__label--danger(for="quiz1-1") нет, это не про меня
 
-        .radio.radio--btn
-            input.radio__input#quiz1-2(type="radio" name="quiz1")
-            label.radio__label.radio__label--warning(for="quiz1-2") иногда я так делаю
+            .radio.radio--btn
+                input.radio__input#quiz1-2(type="radio" name="quiz1")
+                label.radio__label.radio__label--warning(for="quiz1-2") иногда я так делаю
 
-        .radio.radio--btn
-            input.radio__input#quiz1-3(type="radio" name="quiz1")
-            label.radio__label.radio__label--success(for="quiz1-3") да, это про меня
+            .radio.radio--btn
+                input.radio__input#quiz1-3(type="radio" name="quiz1")
+                label.radio__label.radio__label--success(for="quiz1-3") да, это про меня
 
 
-    .col-sm.pl-2
+    .col-lg.pl-lg-2.mt-30.mt-lg-0
         .card
             .card__header
                 .card__title У тебя <span id="scoreCounter">0</span> баллов
