--- a/src/index.pug
+++ b/src/index.pug
@@ -18,7 +18,7 @@ block main
                     .quiz__block
                         header.quiz__block-header
                             .quiz__block-header-counter.mr-25 1
-                            h3.h4.quiz__title Я всегда пишу список целей на год, месяц, неделю, день. Обо мне можно сказать, что я знаю, чего хочу в жизни и как этого достичь.
+                            h3.h4.quiz__title.mb-0 Я всегда пишу список целей на год, месяц, неделю, день. Обо мне можно сказать, что я знаю, чего хочу в жизни и как этого достичь.
 
                         //- Question block
                         .quiz__quest-block
