--- a/src/mixins/sass/_sprite-img.scss
+++ b/src/mixins/sass/_sprite-img.scss
@@ -10,16 +10,27 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
 $arrow-back-up-primary-name: 'arrow-back-up-primary';
-$arrow-back-up-primary-x: 168px;
+$arrow-back-up-primary-x: 188px;
 $arrow-back-up-primary-y: 0px;
-$arrow-back-up-primary-offset-x: -168px;
+$arrow-back-up-primary-offset-x: -188px;
 $arrow-back-up-primary-offset-y: 0px;
 $arrow-back-up-primary-width: 37px;
 $arrow-back-up-primary-height: 58px;
-$arrow-back-up-primary-total-width: 251px;
-$arrow-back-up-primary-total-height: 196px;
+$arrow-back-up-primary-total-width: 270px;
+$arrow-back-up-primary-total-height: 217px;
 $arrow-back-up-primary-image: '../images/sprite.png';
-$arrow-back-up-primary: (168px, 0px, -168px, 0px, 37px, 58px, 251px, 196px, '../images/sprite.png', 'arrow-back-up-primary', );
+$arrow-back-up-primary: (188px, 0px, -188px, 0px, 37px, 58px, 270px, 217px, '../images/sprite.png', 'arrow-back-up-primary', );
+$arrow-foward-down-white-mobile-name: 'arrow-foward-down-white-mobile';
+$arrow-foward-down-white-mobile-x: 92px;
+$arrow-foward-down-white-mobile-y: 0px;
+$arrow-foward-down-white-mobile-offset-x: -92px;
+$arrow-foward-down-white-mobile-offset-y: 0px;
+$arrow-foward-down-white-mobile-width: 53px;
+$arrow-foward-down-white-mobile-height: 45px;
+$arrow-foward-down-white-mobile-total-width: 270px;
+$arrow-foward-down-white-mobile-total-height: 217px;
+$arrow-foward-down-white-mobile-image: '../images/sprite.png';
+$arrow-foward-down-white-mobile: (92px, 0px, -92px, 0px, 53px, 45px, 270px, 217px, '../images/sprite.png', 'arrow-foward-down-white-mobile', );
 $arrow-foward-down-white-name: 'arrow-foward-down-white';
 $arrow-foward-down-white-x: 0px;
 $arrow-foward-down-white-y: 0px;
@@ -27,87 +38,87 @@ $arrow-foward-down-white-offset-x: 0px;
 $arrow-foward-down-white-offset-y: 0px;
 $arrow-foward-down-white-width: 31px;
 $arrow-foward-down-white-height: 96px;
-$arrow-foward-down-white-total-width: 251px;
-$arrow-foward-down-white-total-height: 196px;
+$arrow-foward-down-white-total-width: 270px;
+$arrow-foward-down-white-total-height: 217px;
 $arrow-foward-down-white-image: '../images/sprite.png';
-$arrow-foward-down-white: (0px, 0px, 0px, 0px, 31px, 96px, 251px, 196px, '../images/sprite.png', 'arrow-foward-down-white', );
+$arrow-foward-down-white: (0px, 0px, 0px, 0px, 31px, 96px, 270px, 217px, '../images/sprite.png', 'arrow-foward-down-white', );
 $car-name: 'car';
 $car-x: 49px;
-$car-y: 153px;
+$car-y: 174px;
 $car-offset-x: -49px;
-$car-offset-y: -153px;
+$car-offset-y: -174px;
 $car-width: 60px;
 $car-height: 30px;
-$car-total-width: 251px;
-$car-total-height: 196px;
+$car-total-width: 270px;
+$car-total-height: 217px;
 $car-image: '../images/sprite.png';
-$car: (49px, 153px, -49px, -153px, 60px, 30px, 251px, 196px, '../images/sprite.png', 'car', );
+$car: (49px, 174px, -49px, -174px, 60px, 30px, 270px, 217px, '../images/sprite.png', 'car', );
 $check-light-name: 'check-light';
-$check-light-x: 210px;
-$check-light-y: 156px;
-$check-light-offset-x: -210px;
-$check-light-offset-y: -156px;
+$check-light-x: 230px;
+$check-light-y: 108px;
+$check-light-offset-x: -230px;
+$check-light-offset-y: -108px;
 $check-light-width: 28px;
 $check-light-height: 23px;
-$check-light-total-width: 251px;
-$check-light-total-height: 196px;
+$check-light-total-width: 270px;
+$check-light-total-height: 217px;
 $check-light-image: '../images/sprite.png';
-$check-light: (210px, 156px, -210px, -156px, 28px, 23px, 251px, 196px, '../images/sprite.png', 'check-light', );
+$check-light: (230px, 108px, -230px, -108px, 28px, 23px, 270px, 217px, '../images/sprite.png', 'check-light', );
 $check-sm-name: 'check-sm';
-$check-sm-x: 241px;
-$check-sm-y: 94px;
-$check-sm-offset-x: -241px;
-$check-sm-offset-y: -94px;
+$check-sm-x: 230px;
+$check-sm-y: 136px;
+$check-sm-offset-x: -230px;
+$check-sm-offset-y: -136px;
 $check-sm-width: 10px;
 $check-sm-height: 8px;
-$check-sm-total-width: 251px;
-$check-sm-total-height: 196px;
+$check-sm-total-width: 270px;
+$check-sm-total-height: 217px;
 $check-sm-image: '../images/sprite.png';
-$check-sm: (241px, 94px, -241px, -94px, 10px, 8px, 251px, 196px, '../images/sprite.png', 'check-sm', );
+$check-sm: (230px, 136px, -230px, -136px, 10px, 8px, 270px, 217px, '../images/sprite.png', 'check-sm', );
 $dahsed-line-name: 'dahsed-line';
-$dahsed-line-x: 241px;
-$dahsed-line-y: 107px;
-$dahsed-line-offset-x: -241px;
-$dahsed-line-offset-y: -107px;
+$dahsed-line-x: 261px;
+$dahsed-line-y: 46px;
+$dahsed-line-offset-x: -261px;
+$dahsed-line-offset-y: -46px;
 $dahsed-line-width: 7px;
 $dahsed-line-height: 1px;
-$dahsed-line-total-width: 251px;
-$dahsed-line-total-height: 196px;
+$dahsed-line-total-width: 270px;
+$dahsed-line-total-height: 217px;
 $dahsed-line-image: '../images/sprite.png';
-$dahsed-line: (241px, 107px, -241px, -107px, 7px, 1px, 251px, 196px, '../images/sprite.png', 'dahsed-line', );
+$dahsed-line: (261px, 46px, -261px, -46px, 7px, 1px, 270px, 217px, '../images/sprite.png', 'dahsed-line', );
 $family-name: 'family';
-$family-x: 104px;
-$family-y: 101px;
-$family-offset-x: -104px;
-$family-offset-y: -101px;
+$family-x: 92px;
+$family-y: 50px;
+$family-offset-x: -92px;
+$family-offset-y: -50px;
 $family-width: 46px;
 $family-height: 42px;
-$family-total-width: 251px;
-$family-total-height: 196px;
+$family-total-width: 270px;
+$family-total-height: 217px;
 $family-image: '../images/sprite.png';
-$family: (104px, 101px, -104px, -101px, 46px, 42px, 251px, 196px, '../images/sprite.png', 'family', );
+$family: (92px, 50px, -92px, -50px, 46px, 42px, 270px, 217px, '../images/sprite.png', 'family', );
 $header-subtitle-left-name: 'header-subtitle-left';
-$header-subtitle-left-x: 130px;
-$header-subtitle-left-y: 0px;
-$header-subtitle-left-offset-x: -130px;
-$header-subtitle-left-offset-y: 0px;
+$header-subtitle-left-x: 0px;
+$header-subtitle-left-y: 101px;
+$header-subtitle-left-offset-x: 0px;
+$header-subtitle-left-offset-y: -101px;
 $header-subtitle-left-width: 33px;
 $header-subtitle-left-height: 68px;
-$header-subtitle-left-total-width: 251px;
-$header-subtitle-left-total-height: 196px;
+$header-subtitle-left-total-width: 270px;
+$header-subtitle-left-total-height: 217px;
 $header-subtitle-left-image: '../images/sprite.png';
-$header-subtitle-left: (130px, 0px, -130px, 0px, 33px, 68px, 251px, 196px, '../images/sprite.png', 'header-subtitle-left', );
+$header-subtitle-left: (0px, 101px, 0px, -101px, 33px, 68px, 270px, 217px, '../images/sprite.png', 'header-subtitle-left', );
 $header-subtitle-right-name: 'header-subtitle-right';
-$header-subtitle-right-x: 92px;
+$header-subtitle-right-x: 150px;
 $header-subtitle-right-y: 0px;
-$header-subtitle-right-offset-x: -92px;
+$header-subtitle-right-offset-x: -150px;
 $header-subtitle-right-offset-y: 0px;
 $header-subtitle-right-width: 33px;
 $header-subtitle-right-height: 68px;
-$header-subtitle-right-total-width: 251px;
-$header-subtitle-right-total-height: 196px;
+$header-subtitle-right-total-width: 270px;
+$header-subtitle-right-total-height: 217px;
 $header-subtitle-right-image: '../images/sprite.png';
-$header-subtitle-right: (92px, 0px, -92px, 0px, 33px, 68px, 251px, 196px, '../images/sprite.png', 'header-subtitle-right', );
+$header-subtitle-right: (150px, 0px, -150px, 0px, 33px, 68px, 270px, 217px, '../images/sprite.png', 'header-subtitle-right', );
 $house-name: 'house';
 $house-x: 36px;
 $house-y: 0px;
@@ -115,92 +126,92 @@ $house-offset-x: -36px;
 $house-offset-y: 0px;
 $house-width: 51px;
 $house-height: 51px;
-$house-total-width: 251px;
-$house-total-height: 196px;
+$house-total-width: 270px;
+$house-total-height: 217px;
 $house-image: '../images/sprite.png';
-$house: (36px, 0px, -36px, 0px, 51px, 51px, 251px, 196px, '../images/sprite.png', 'house', );
+$house: (36px, 0px, -36px, 0px, 51px, 51px, 270px, 217px, '../images/sprite.png', 'house', );
 $like-name: 'like';
-$like-x: 52px;
+$like-x: 90px;
 $like-y: 101px;
-$like-offset-x: -52px;
+$like-offset-x: -90px;
 $like-offset-y: -101px;
 $like-width: 47px;
 $like-height: 47px;
-$like-total-width: 251px;
-$like-total-height: 196px;
+$like-total-width: 270px;
+$like-total-height: 217px;
 $like-image: '../images/sprite.png';
-$like: (52px, 101px, -52px, -101px, 47px, 47px, 251px, 196px, '../images/sprite.png', 'like', );
+$like: (90px, 101px, -90px, -101px, 47px, 47px, 270px, 217px, '../images/sprite.png', 'like', );
 $man-woman-name: 'man-woman';
 $man-woman-x: 0px;
-$man-woman-y: 153px;
+$man-woman-y: 174px;
 $man-woman-offset-x: 0px;
-$man-woman-offset-y: -153px;
+$man-woman-offset-y: -174px;
 $man-woman-width: 44px;
 $man-woman-height: 43px;
-$man-woman-total-width: 251px;
-$man-woman-total-height: 196px;
+$man-woman-total-width: 270px;
+$man-woman-total-height: 217px;
 $man-woman-image: '../images/sprite.png';
-$man-woman: (0px, 153px, 0px, -153px, 44px, 43px, 251px, 196px, '../images/sprite.png', 'man-woman', );
+$man-woman: (0px, 174px, 0px, -174px, 44px, 43px, 270px, 217px, '../images/sprite.png', 'man-woman', );
 $pdf-name: 'pdf';
-$pdf-x: 210px;
-$pdf-y: 0px;
-$pdf-offset-x: -210px;
-$pdf-offset-y: 0px;
+$pdf-x: 142px;
+$pdf-y: 101px;
+$pdf-offset-x: -142px;
+$pdf-offset-y: -101px;
 $pdf-width: 41px;
 $pdf-height: 43px;
-$pdf-total-width: 251px;
-$pdf-total-height: 196px;
+$pdf-total-width: 270px;
+$pdf-total-height: 217px;
 $pdf-image: '../images/sprite.png';
-$pdf: (210px, 0px, -210px, 0px, 41px, 43px, 251px, 196px, '../images/sprite.png', 'pdf', );
+$pdf: (142px, 101px, -142px, -101px, 41px, 43px, 270px, 217px, '../images/sprite.png', 'pdf', );
 $smile-name: 'smile';
-$smile-x: 210px;
-$smile-y: 94px;
-$smile-offset-x: -210px;
-$smile-offset-y: -94px;
+$smile-x: 230px;
+$smile-y: 46px;
+$smile-offset-x: -230px;
+$smile-offset-y: -46px;
 $smile-width: 26px;
 $smile-height: 26px;
-$smile-total-width: 251px;
-$smile-total-height: 196px;
+$smile-total-width: 270px;
+$smile-total-height: 217px;
 $smile-image: '../images/sprite.png';
-$smile: (210px, 94px, -210px, -94px, 26px, 26px, 251px, 196px, '../images/sprite.png', 'smile', );
+$smile: (230px, 46px, -230px, -46px, 26px, 26px, 270px, 217px, '../images/sprite.png', 'smile', );
 $telegram-md-name: 'telegram-md';
-$telegram-md-x: 0px;
+$telegram-md-x: 38px;
 $telegram-md-y: 101px;
-$telegram-md-offset-x: 0px;
+$telegram-md-offset-x: -38px;
 $telegram-md-offset-y: -101px;
 $telegram-md-width: 47px;
 $telegram-md-height: 47px;
-$telegram-md-total-width: 251px;
-$telegram-md-total-height: 196px;
+$telegram-md-total-width: 270px;
+$telegram-md-total-height: 217px;
 $telegram-md-image: '../images/sprite.png';
-$telegram-md: (0px, 101px, 0px, -101px, 47px, 47px, 251px, 196px, '../images/sprite.png', 'telegram-md', );
+$telegram-md: (38px, 101px, -38px, -101px, 47px, 47px, 270px, 217px, '../images/sprite.png', 'telegram-md', );
 $telegram-name: 'telegram';
-$telegram-x: 210px;
-$telegram-y: 125px;
-$telegram-offset-x: -210px;
-$telegram-offset-y: -125px;
+$telegram-x: 230px;
+$telegram-y: 77px;
+$telegram-offset-x: -230px;
+$telegram-offset-y: -77px;
 $telegram-width: 26px;
 $telegram-height: 26px;
-$telegram-total-width: 251px;
-$telegram-total-height: 196px;
+$telegram-total-width: 270px;
+$telegram-total-height: 217px;
 $telegram-image: '../images/sprite.png';
-$telegram: (210px, 125px, -210px, -125px, 26px, 26px, 251px, 196px, '../images/sprite.png', 'telegram', );
+$telegram: (230px, 77px, -230px, -77px, 26px, 26px, 270px, 217px, '../images/sprite.png', 'telegram', );
 $unlock-name: 'unlock';
-$unlock-x: 210px;
-$unlock-y: 48px;
-$unlock-offset-x: -210px;
-$unlock-offset-y: -48px;
+$unlock-x: 230px;
+$unlock-y: 0px;
+$unlock-offset-x: -230px;
+$unlock-offset-y: 0px;
 $unlock-width: 40px;
 $unlock-height: 41px;
-$unlock-total-width: 251px;
-$unlock-total-height: 196px;
+$unlock-total-width: 270px;
+$unlock-total-height: 217px;
 $unlock-image: '../images/sprite.png';
-$unlock: (210px, 48px, -210px, -48px, 40px, 41px, 251px, 196px, '../images/sprite.png', 'unlock', );
-$spritesheet-width: 251px;
-$spritesheet-height: 196px;
+$unlock: (230px, 0px, -230px, 0px, 40px, 41px, 270px, 217px, '../images/sprite.png', 'unlock', );
+$spritesheet-width: 270px;
+$spritesheet-height: 217px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($arrow-back-up-primary, $arrow-foward-down-white, $car, $check-light, $check-sm, $dahsed-line, $family, $header-subtitle-left, $header-subtitle-right, $house, $like, $man-woman, $pdf, $smile, $telegram-md, $telegram, $unlock, );
-$spritesheet: (251px, 196px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($arrow-back-up-primary, $arrow-foward-down-white-mobile, $arrow-foward-down-white, $car, $check-light, $check-sm, $dahsed-line, $family, $header-subtitle-left, $header-subtitle-right, $house, $like, $man-woman, $pdf, $smile, $telegram-md, $telegram, $unlock, );
+$spritesheet: (270px, 217px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
