--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,30 +1,31 @@
 header.header
     .container
+        .header__site-descr Интерактивный тест, основанный на научных знаниях <br class="d-none d-xl-inline" />о мозге, когнитивистике и нейрофизиологии
+
         .row.align-items-center
-            .col-md-8
-                .header__site-descr Интерактивный тест, основанный на научных знаниях <br />о мозге, когнитивистике и нейрофизиологии
+            .col-xl-auto
                 h1.header__title.my-30
                     span.d-block.text-primary.font-weight-bold Что мешает тебе
                     | добиваться
-                    br
+                    br.d-none.d-xl-inline
                     | больших успехов?
 
                 h2.h3.header__subtitle.text-center.mt-0
                     | Пройди тест и выясни,
-                    br
+                    br.d-none.d-xl-inline
                     | что тормозит тебя больше всего
                     span.header__subtitle-dashed-line
 
                 h3.h5.text-primary.lh-1-05
                     | Тест не только выяснит причину неудач,
-                    br
+                    br.d-none.d-xl-inline
                     | но и подберет набор техник-приемов
 
                 .header__test-resourses
                     .row.no-gutters.align-items-center
                         .col-auto
                             img(src="./images/test-resourses.png" alt="Используя их, ты сможешь двигаться к своей цели быстрее и эффективнее ")
-                        .col.pl-15
+                        .col-sm.my-2.my-sm-0.pl-15
                             ul.style-check
                                 each name in ['бесплатные', 'быстрые', 'эффективные', 'подходят именно тебе']
                                     li= name
@@ -32,13 +33,13 @@ header.header
                     .header__test-resourses-txt используя их, ты сможешь двигаться <br />к своей цели быстрее и эффективнее
 
                 .header__btn-block.mt-40
-                    button.btn.btn-lg.btn-primary.btn-block.btn-flare.btn-s67.px-30.btn-flare--js(type="button")
+                    button.btn.btn-primary.btn-block.btn-flare.btn-s67.btn-flare--js(type="button")
                         span.text-uppercase.d-block Пройти самодиагностику
                         span.d-block за 2 минуты
 
                     p.mb-0.mt-15.text-center.fz-14.font-weight-light Бесплатно, данные защищены
 
-            .col-md-4
+            .col-xl-5.d-none.d-xl-block
                 .brain
                     .brain__callout Твой мозг может всё
                     img(src="./images/brain.png" alt="Твой мозг может всё")
