Адаптация под мобильные: Работаем над блоком захвата телефона и результатом

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -30,7 +30,7 @@ header.header
                                 each name in ['бесплатные', 'быстрые', 'эффективные', 'подходят именно тебе']
                                     li= name
 
-                    .header__test-resourses-txt используя их, ты сможешь двигаться <br />к своей цели быстрее и эффективнее
+                    .header__test-resourses-txt.pr-15 используя их, ты сможешь двигаться <br />к своей цели быстрее и эффективнее
 
                 .header__btn-block.mt-40
                     button.btn.btn-primary.btn-block.btn-flare.btn-s67.btn-flare--js(type="button")
