--- a/src/components/progress/_progress.sass
+++ b/src/components/progress/_progress.sass
@@ -4,6 +4,9 @@
     &__step
         text-align: center
         width: 100%
+        font-size: 14px
+        @include media-breakpoint-up(lg)
+            font-size: 16px
 
         &::before
             content: ""
