--- a/src/components/quiz/quiz__quest-block.pug
+++ b/src/components/quiz/quiz__quest-block.pug
@@ -23,11 +23,11 @@
             .card__body
                 p.card__small.mb-0 Пояснение к вопросу от сертифицированного тренера и лайф-коуча
 
-                .row.mt-25
-                    .col-sm-auto.text-center
+                .row.mt-sm-25.mt-15
+                    .col-md-auto.text-center
                         .card__img
                             img.mb-15(src="./images/pavluk-d-s.png" alt="Павлюк Дмитрий Сергеевич")
                         .card__name Павлюк <br />Дмитрий Сергеевич
 
-                    .col-sm
+                    .col-md.mt-15.mt-md-0
                         .card__text Сам факт планирования уже помогает в поиске ресурсов на исполнение. Если у тебя проблемы с навыком планирования, то в конце теста ты получишь мини-техники, которые помогут быстро сделать планирование приятной привычкой.
