--- a/src/components/result/result__static.pug
+++ b/src/components/result/result__static.pug
@@ -1,8 +1,8 @@
 .row
-    .col-md-auto
+    .col-xl-auto
         img.img-fluid.result__static-img(src="./images/result/kouch.jpg" alt="Павлюк Дмитрий Сергеевич")
 
-    .col-md-7.textblock
+    .col-xl-7.mt-20.mt-xl-0.textblock
         p Приветствую, меня зовут Павлюк Дмитрий Сергеевич. Ты прошел тестирование и набрал <span class="text-primary fz-20 font-weight-bold"><span id="resultScore">ХХХХ</span> баллов</span>. Система выявила некоторые причины, которые затрудняют твое продвижение к целям. Я подготовил  короткие, но очень эффективные мини-техники, которые помогут тебе исправить ситуацию прямо сейчас.
 
         h3 Как пользоваться материалами?
