--- a/src/base/sass/_base.sass
+++ b/src/base/sass/_base.sass
@@ -1,3 +1,5 @@
 body
     height: 100%
-    padding-bottom: 100px
+    padding-bottom: 60px
+    @include media-breakpoint-up(xl)
+        padding-bottom: 100px
