--- a/src/components/card/_card.sass
+++ b/src/components/card/_card.sass
@@ -40,24 +40,39 @@
         padding: 17px 13px
         position: relative
 
-        &::before
-            border-right: 9px solid $primary
-            border-top: 11.5px solid transparent
-            border-bottom: 11.5px solid transparent
+        &::before,
+        &::after
             content: ""
             display: block
             position: absolute
-            left: -9px
-            top: 50%
-            transform: translateY(-50%)
+            left: 50%
+            @include media-breakpoint-down(sm)
+                transform: translateX(-50%)
+            @include media-breakpoint-up(md)
+                top: 50%
+                transform: translateY(-50%)
+
+        &::before
+            @include media-breakpoint-down(sm)
+                border-bottom: 9px solid $primary
+                border-left: 11.5px solid transparent
+                border-right: 11.5px solid transparent
+                top: -9px
+            @include media-breakpoint-up(md)
+                border-right: 9px solid $primary
+                border-top: 11.5px solid transparent
+                border-bottom: 11.5px solid transparent
+                left: -9px
 
         &::after
-            border-right: 7px solid $white
-            border-top: 9.5px solid transparent
-            border-bottom: 9.5px solid transparent
-            content: ""
-            display: block
-            position: absolute
-            left: -6px
-            top: 50%
-            transform: translateY(-50%)
+            @include media-breakpoint-down(sm)
+                border-bottom: 7px solid $white
+                border-left: 9.5px solid transparent
+                border-right: 9.5px solid transparent
+                top: -6px
+            @include media-breakpoint-up(md)
+                border-right: 7px solid $white
+                border-top: 9.5px solid transparent
+                border-bottom: 9.5px solid transparent
+                left: -6px
+
