--- a/src/components/quiz/_quiz.sass
+++ b/src/components/quiz/_quiz.sass
@@ -59,6 +59,32 @@
                     &:focus
                         box-shadow: 0 0 0 0.2rem rgba($primary, .5)
 
+        @include media-breakpoint-down(md)
+            // background-color: $white
+            position: fixed
+            bottom: 0
+            left: 0
+            right: 0
+            z-index: 5
+            min-width: 320px
+            //padding-top: 15px
+
+            .btn
+                border-radius: 0
+                width: 100%
+                height: 60px
+                font-size: 16px
+                font-weight: 700
+                @include media-breakpoint-up(sm)
+                    font-size: 19px
+                    font-weight: 900
+
+        @include media-breakpoint-down(xs)
+            left: -15px
+            right: -15px
+
+
+
     /**
      * Get phone
      */
