--- a/src/index.pug
+++ b/src/index.pug
@@ -14,8 +14,9 @@ block main
                 .progress.mt-30
                     include ./components/progress/progress
 
-                form#quizForm(novalidate)
-                    .quiz__block
+                form#quizForm.mt-lg-40.mt-30(novalidate)
+                    //- ====================== Questions ====================================
+                    .quiz__block.d-none
                         header.quiz__block-header
                             .quiz__block-header-counter.mr-25 1
                             h3.h4.quiz__title.mb-0 Я всегда пишу список целей на год, месяц, неделю, день. Обо мне можно сказать, что я знаю, чего хочу в жизни и как этого достичь.
@@ -25,33 +26,34 @@ block main
                             include ./components/quiz/quiz__quest-block
 
                             .quiz__btns.text-center.mt-50
-                                .row.justify-content-center
-                                    .col-sm-auto
-                                        button.btn-prev.btn.btn-secondary.btn-s48.px-25(type="button") < Предыдущий шаг
-                                    .col-sm-auto
-                                        button.btn-next.btn.btn-secondary.btn-flare.btn-s48.px-25.is-active(type="button") Cледующий шаг >
-                    //- Get phone block
-                    .quiz__get-phone.mt-50
+                                .container
+                                    .row.justify-content-center.m-0.m-lg-n15
+                                        .col-lg-auto.col-6.px-0.px-lg-15
+                                            button.btn-prev.btn.btn-secondary.btn-s48.px-sm-25(type="button") < Назад
+                                        .col-lg-auto.col-6.px-0.px-lg-15
+                                            button.btn-next.btn.btn-secondary.btn-flare.btn-s48.px-sm-25.is-active(type="button") Cледующий шаг >
+                    //- ===================== Get phone block ======================================
+                    .quiz__get-phone.mt-30
                         include ./components/quiz/quiz__get-phone
 
             //- Block footer
             include ./components/footer/footer
 
-        //- Result block - BAD
+        //- ================ Result block - BAD ================================
         .white-wrap.mt-20
-            .result.px-sm-20
+            .result.px-xl-20
                 .row.justify-content-center.no-gutters
-                    .col-md-10
+                    .col-lg-10
                         header.result__header
                             i.icon.unlock
                             h2.m-0.result__title Результат тестирования и мини-техники для тебя
 
                 //- Staic text
-                .result__static.mt-50
+                .result__static.mt-xl-50.mt-30
                     include ./components/result/result__static
 
-                .result__container.mt-50
-                    h2.h4.result__container-tlt.mb-30 Результаты самодиагностики по 5 векторам <br />достижения целей и успеха
+                .result__container.mt-xl-50.mt-15
+                    h2.h4.result__container-tlt.mb-30 Результаты самодиагностики по 5 векторам <br class="d-none d-xl-inline" />достижения целей и успеха
 
                     //- Blocks
                     .result__container-blocks
@@ -66,9 +68,9 @@ block main
             //- Block footer
             include ./components/footer/footer
 
-        //- Result block - GOOD
+        //- ============ Result block - GOOD ======================================
         .white-wrap.mt-20
-           .result.px-sm-20
+           .result.px-xl-20
                .row.justify-content-center.no-gutters
                    .col-md-10
                        header.result__header
@@ -80,7 +82,7 @@ block main
                    include ./components/result/result__static
 
                .result__container.mt-50
-                   h2.h4.result__container-tlt.mb-30 Результаты самодиагностики по 5 векторам <br />достижения целей и успеха
+                   h2.h4.result__container-tlt.mb-30 Результаты самодиагностики по 5 векторам <br class="d-none d-xl-inline" />достижения целей и успеха
 
                    //- Blocks
                    .result__container-blocks
