--- a/src/components/quiz/quiz__header.pug
+++ b/src/components/quiz/quiz__header.pug
@@ -1,4 +1,4 @@
-header.quiz__header.mb-50
-    h2.quiz__block-tlt
+header.quiz__header.mb-xl-50.mb-30
+    h2.quiz__block-tlt.mb-0
         span.d-block Пройди тест, выясни, что тормозит тебя больше всего,
         span.fw-500.fz-19 и получи набор мини-техник, чтобы исправить ситуацию
