--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,7 @@ block main
                 .progress.mt-30
                     include ./components/progress/progress
 
-                form#quizForm.mt-lg-40.mt-30(novalidate)
+                form#quizForm(novalidate)
                     //- ====================== Questions ====================================
                     .quiz__block.d-none
                         header.quiz__block-header
