--- a/src/components/progress/_progress.sass
+++ b/src/components/progress/_progress.sass
@@ -5,7 +5,7 @@
         text-align: center
         width: 100%
         font-size: 14px
-        @include media-breakpoint-up(lg)
+        @include media-breakpoint-up(xl)
             font-size: 16px
 
         &::before
