--- a/src/components/quiz/_quiz.sass
+++ b/src/components/quiz/_quiz.sass
@@ -2,8 +2,9 @@
     &__block
         &-tlt
             font-size: 23px
-            text-align: center
             line-height: 0.96
+            @include media-breakpoint-up(sm)
+                text-align: center
 
         &-header
             align-items: center
@@ -60,14 +61,12 @@
                         box-shadow: 0 0 0 0.2rem rgba($primary, .5)
 
         @include media-breakpoint-down(md)
-            // background-color: $white
             position: fixed
             bottom: 0
             left: 0
             right: 0
             z-index: 5
             min-width: 320px
-            //padding-top: 15px
 
             .btn
                 border-radius: 0
@@ -86,7 +85,7 @@
 
 
     /**
-     * Get phone
+     * =================== Get phone ===================================
      */
     &__get-phone
         &-tlt
@@ -95,28 +94,52 @@
             font-weight: 900
 
         &-phone
-            position: absolute
-            left: -105px
-            bottom: -60px
-            z-index: 0
+            @include media-breakpoint-up(lg)
+                position: absolute
+                left: -135px
+                bottom: -60px
+                z-index: 0
+            @include media-breakpoint-up(xl)
+                left: -105px
 
         &-field
-            margin-top: -25px
-            padding-left: 120px
-            padding-right: 80px
             position: relative
+            margin-top: 20px
+            text-align: center
+            @include media-breakpoint-up(xl)
+                padding-left: 120px
+                padding-right: 80px
+                margin-top: -25px
+                text-align: left
+
+            > .row
+                @include media-breakpoint-down(lg)
+                    max-width: 395px
+                    margin-left: auto
+                    margin-right: auto
+
+                @include media-breakpoint-down(md)
+                    margin-top: -48%
 
             .form
                 &__group
                     width: 100%
-                    max-width: 272px
+                    @include media-breakpoint-up(xl)
+                        max-width: 272px
 
                 &__label
-                    padding-left: 50px
-                    white-space: nowrap
+                    @include media-breakpoint-down(lg)
+                        background-color: $white
+                        padding: 10px
+                        font-weight: 500
+                        margin-bottom: 10px
+                    @include media-breakpoint-up(xl)
+                        padding-left: 50px
+                        white-space: nowrap
 
                 &__control
                     text-align: center
+                    width: 100%
 
             .btn
                 border-radius: 33px
@@ -125,8 +148,11 @@
                 font-weight: 900
                 color: $white
                 text-transform: uppercase
-                padding-left: 35px
-                padding-right: 35px
+                width: 100%
+                height: 67px
+                @include media-breakpoint-up(xl)
+                    padding-left: 35px
+                    padding-right: 35px
 
         &-bottom
             p
