--- a/src/components/radio/_radio.sass
+++ b/src/components/radio/_radio.sass
@@ -15,14 +15,10 @@
                     content: ""
                     display: block
                     position: absolute
-                    top: 11px
-                    left: -24px
-                    width: 11px
-                    height: 11px
-                    @include media-breakpoint-up(lg)
-                        top: 6px
-                        width: 9px
-                        height: 9px
+                    top: 6px
+                    left: -25px
+                    width: 9px
+                    height: 9px
 
     &__label
         font-size: 16px
@@ -39,14 +35,10 @@
             content: ""
             display: block
             position: absolute
-            top: 6px
+            top: 2px
             left: -29px
-            width: 21px
-            height: 21px
-            @include media-breakpoint-up(lg)
-                top: 2px
-                width: 17px
-                height: 17px
+            width: 17px
+            height: 17px
 
     // Btns style
     &--btn
@@ -64,6 +56,29 @@
                 @include media-breakpoint-up(lg)
                     padding: 4px 10px
                     font-size: 16px
+
+                &::before
+                    top: 6px
+                    width: 21px
+                    height: 21px
+                    @include media-breakpoint-up(lg)
+                        top: 2px
+                        width: 17px
+                        height: 17px
+
+            &__input
+                display: none
+
+                &:checked
+                    + #{$self}__label
+                        &::after
+                            top: 11px
+                            width: 11px
+                            height: 11px
+                            @include media-breakpoint-up(lg)
+                                top: 6px
+                                width: 9px
+                                height: 9px
 
                 &--danger
                     background-color: $red
