--- a/src/components/result/bad/result-block__1.pug
+++ b/src/components/result/bad/result-block__1.pug
@@ -1,26 +1,27 @@
 .result-block__title Планирование и Декомпозиция целей
 .row
-    .col-md-auto
-        img(src="./images/result-block/bad/itog-testirovaniia.jpg" alt="Итоги тестирования")
+    .col-lg-auto.text-center
+        img.img-fluid(src="./images/result-block/bad/itog-testirovaniia.jpg" alt="Итоги тестирования")
 
-    .col-md.textblock
+    .col-lg.textblock.mt-20.mt-lg-0
         h3.h5.mb-1 Итоги тестирования
         p.mb-0 Ты нуждаешься в улучшении навыков планирования и декомпозиции. Это очень сильно ограничивает реализацию твоего потенциала.
         p.mb-0 Если ты научишься правильно ставить цель и освоишь технику декомпозиции, то самая большая мечта начнет осуществляться.
         p.mb-0 Я подготовил для тебя короткие мини-упражнения, которую ты можешь применить уже сегодня и получить практические навыки планирования и декомпозиции.
 
-h3.h6.text-cobalt.position-relative.mt-40
+h3.h6.text-cobalt.position-relative.mt-lg-40
+    | Скорее смотри это видео и выполняй задания. <br class="d-none d-lg-inline" /> Не жди, начинай делать прямо сейчас.
     img.bad-result-arrow-down-1(src="./images/result-block/bad/bad-result-arrow-down-1.png" alt="")
-    | Скорее смотри это видео и выполняй задания. <br /> Не жди, начинай делать прямо сейчас.
 
 .row.align-items-center
-    .col-md-auto
+    .col-xl-auto.text-center
         a.video-stub(href="#")
             img.img-fluid(src="./images/result-block/bad/video-stub.jpg" alt="Скорее смотри это видео и выполняй задания.")
-    .col-md-1.textblock
+
+    .col-xl-1.textblock.text-center.mt-15.mt-xl-0
         p.m-0 или
 
-    .col-md.text-center
+    .col-xl.text-center.mt-15.mt-xl-0
         a.font-weight-bold.fz-14(href="#")
             i.icon.pdf
             span.d-block.mt-1 Скачать технику <br />в PDF-формате
