Адаптация под мобильные: Блок результата

--- a/src/components/result/bad/result-block__1.pug
+++ b/src/components/result/bad/result-block__1.pug
@@ -27,6 +27,6 @@ h3.h6.text-cobalt.position-relative.mt-lg-40
             span.d-block.mt-1 Скачать технику <br />в PDF-формате
 
 .mt-15
-    a.d-flex.align-items-center.fz-14(href="#" target="_blank")
+    a.d-flex.align-items-center.justify-content-center.justify-content-xl-start.fz-14(href="#" target="_blank")
         i.icon.telegram
         span.ml-2 Вступить в группу->>
