--- a/src/components/result/bad/result-block__2.pug
+++ b/src/components/result/bad/result-block__2.pug
@@ -1,19 +1,19 @@
 .result-block__title.result-block__title--simple Сложно меняться в одиночку!
 .row
-    .col-md-auto
+    .col-lg-auto.text-center
         img.img-fluid(src="./images/result-block/bad/slozhno-meniatsia.jpg" alt="Сложно меняться в одиночку")
 
-    .col-md.textblock
+    .col-lg.textblock.mt-20.mt-lg-0
         p.mb-0 Дорогие мои и любимые, к сожалению, я не могу выдать больше полезностей в рамках этого формата. Но я хорошо понимаю, что меняться одному сложно, нужна поддержка. Все становится гораздо легче, когда рядом люди с такими же задачами, как у тебя, и вы можете поддерживать друг друга.
         h3.h6.text-cobalt.mt-1 Специально для тебя я создал бесплатную рабочую группу в Телеграме.
 
 
 .result-block__bottom-bordered
-    .row.ml-n90.no-gutters
-        .col-md-auto
+    .row.ml-xl-n90.no-gutters
+        .col-xl-auto.text-center
             img.img-fluid(src="./images/result-block/bad/ty-poluchish.png" alt="Там ты получишь")
 
-        .col-md.textblock.pl-15
+        .col-xl.textblock.pl-15.mt-15.mt-xl-0
             p.fw-900.mb-0 Там ты получишь:
             ol
                 li Методики, работающие техники и советы, как менять себя легче.
@@ -22,9 +22,10 @@
 
             p.mt-25.mb-0.position-relative
                 strong Жми и вступай в группу прямо сейчас!
-                img.bad-result-arrow-down-2(src="./images/result-block/bad/bad-result-arrow-down-2.png" alt="")
+                img.bad-result-arrow-down-2.d-none.d-xl-inline(src="./images/result-block/bad/bad-result-arrow-down-2.png" alt="")
 
     .mt-30.text-center
         a.btn.btn-primary.btn-s67.btn-flare.px-20(href="#" target="_blank")
-            i.icon.telegram-md.mr-20
-            | Вступить в группу
+            i.icon.telegram-md.d-none.d-md-block.mr-20
+            i.icon.telegram.mr-2
+            span Вступить в группу
