--- a/src/components/result/result__static.pug
+++ b/src/components/result/result__static.pug
@@ -1,5 +1,5 @@
 .row
-    .col-xl-auto
+    .col-xl-auto.text-center
         img.img-fluid.result__static-img(src="./images/result/kouch.jpg" alt="Павлюк Дмитрий Сергеевич")
 
     .col-xl-7.mt-20.mt-xl-0.textblock
