--- a/src/components/result-block/_result-block.sass
+++ b/src/components/result-block/_result-block.sass
@@ -57,13 +57,29 @@
     &__bottom-bordered
         border: 1px solid $primary
         border-radius: 5px
-        padding: 25px
+        padding: 15px
+        @include media-breakpoint-up(sm)
+            padding: 25px
 
         .btn
             border-radius: 33.5px
             color: #feffff
-            font-size: 20px
+            font-size: 16px
             font-weight: 700
+            max-width: 300px
+            width: 100%
+            justify-content: center
+            @include media-breakpoint-up(md)
+                font-size: 20px
+
+            @include media-breakpoint-down(sm)
+                .icon
+                    &.telegram
+                        border: 2px solid $white
+                        border-radius: 50%
+                        height: 30px
+                        width: 30px
+                        flex-shrink: 0
 
     .bad-result-arrow-down-2
         position: absolute
