--- a/src/components/result/_result.sass
+++ b/src/components/result/_result.sass
@@ -5,13 +5,17 @@
         .icon
             flex-shrink: 0
             margin-right: 20px
-            margin-top: 26px
+            margin-top: 5px
+            @include media-breakpoint-up(xl)
+                margin-top: 26px
 
     &__title
         border-bottom: 1px solid #959595
         color: #b1b1b1
         line-height: 1.17
-        padding-bottom: 30px
+        padding-bottom: 20px
+        @include media-breakpoint-up(xl)
+            padding-bottom: 30px
 
     // Static block
     &__static
@@ -30,8 +34,12 @@
     // Container
     &__container
         @include linear-gradient(to right, #3b1d86, #265c99)
-        border-radius: 5px
         padding: 25px 30px
+        @include media-breakpoint-down(xs)
+            margin-left: -30px
+            margin-right: -30px
+        @include media-breakpoint-up(sm)
+            border-radius: 5px
         @include media-breakpoint-up(lg)
             padding: 35px 50px
 
