--- a/src/components/result/good/result-block.pug
+++ b/src/components/result/good/result-block.pug
@@ -1,14 +1,14 @@
 mixin result-block(title, img, text, footer)
     .result-block__title= title
     .row
-        .col-md-auto
+        .col-lg-auto.text-center
             img(src=`./images/result-block/good/${img}.jpg` alt= title)
 
-        .col-md.textblock
+        .col-lg.textblock.mt-15.mt-lg-0
             p.mb-0= text
 
             .result-block__footer.mt-2
-                img.img-fluid(src="./images/result-block/good/result-block-good-arrow.png" alt="")
+                img.img-fluid.mb-10.mb-xl-0(src="./images/result-block/good/result-block-good-arrow.png" alt="")
                 .d-flex.justify-content-end.align-items-center.text-right
                     p.mb-0= footer
 
