--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -44,6 +44,7 @@
 @import "../../components/spinner-block/spinner-block"
 @import "../../components/result/result"
 @import "../../components/result-block/result-block"
+@import "../../components/video-block/video-block"
 
 /**
  * Bootstrap
