--- a/src/components/result/bad/result-block__1.pug
+++ b/src/components/result/bad/result-block__1.pug
@@ -11,11 +11,11 @@
 
 h3.h6.text-cobalt.position-relative.mt-lg-40
     | Скорее смотри это видео и выполняй задания. <br class="d-none d-lg-inline" /> Не жди, начинай делать прямо сейчас.
-    img.bad-result-arrow-down-1(src="./images/result-block/bad/bad-result-arrow-down-1.png" alt="")
+    img.bad-result-arrow-down-1.d-none.d-lg-inline(src="./images/result-block/bad/bad-result-arrow-down-1.png" alt="")
 
 .row.align-items-center
     .col-xl-auto.text-center
-        a.video-stub(href="#")
+        a.video-block.video-block__popup-stub(href="#")
             img.img-fluid(src="./images/result-block/bad/video-stub.jpg" alt="Скорее смотри это видео и выполняй задания.")
 
     .col-xl-1.textblock.text-center.mt-15.mt-xl-0
