--- a/src/components/result/bad/result-block__2.pug
+++ b/src/components/result/bad/result-block__2.pug
@@ -27,5 +27,5 @@
     .mt-30.text-center
         a.btn.btn-primary.btn-s67.btn-flare.px-20(href="#" target="_blank")
             i.icon.telegram-md.d-none.d-md-block.mr-20
-            i.icon.telegram.mr-2
+            i.d-md-none.icon.telegram.mr-2
             span Вступить в группу
