--- a/src/components/result-block/_result-block.sass
+++ b/src/components/result-block/_result-block.sass
@@ -44,7 +44,7 @@
         margin-left: auto
         margin-right: auto
         margin-top: 10px
-        @include media-breakpoint-up(lg)
+        @include media-breakpoint-down(lg)
             margin-left: 69%
             margin-top: -10px
         @include media-breakpoint-up(xl)
